@@ -13,6 +13,7 @@ Features:
 - new "websearch" command which default to wiby.me
 - new "share" command to send a page by email
 - "cookies" command and http cookies are now supported in netcache (by Urja)
+- "set default_cmd" now allows to configure what happen on empty lines
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
